tests/negative/parser/mod-chain.orng
fn main() -> Int {
    2 % 3 % 4
}